@@ -29,6 +29,8 @@ Bugs fixed
 ----------
 - Issue #119 - Waf --lcov-report option was broken
 - Issue #84 - Wi-Fi removing wrong header due to copy-paste error
+- wifi: a zero value for the backoff timer might be discarded and a new value
+  might be generated by an erroneous call to NotifyCollision().
 
 Known issues
 ------------
